--- a/internal/mailer/templates/user_welcome.tmpl
+++ b/internal/mailer/templates/user_welcome.tmpl
@@ -5,7 +5,13 @@ Hi,
 
 Thanks for signing up with a Greenlight account, we are excited to have you on board!
 
-For future reference, your user ID number is {{.ID}}
+For future reference, your user ID number is {{.userID}}
+
+Please send a request to the `PUT /v1/users/activated` endpoint with the following JSON to activate your account
+
+{"token": "{{.activationToken}}"}
+
+Please note that this is a one time use token and that it will expire in 3 days.
 
 Thanks,
 
@@ -24,7 +30,12 @@ The Greenlight team
 <body>
     <p>Hi,</p>
     <p>Thanks for signing up with a Greenlight account, we are excited to have you on board!</p>
-    <p>For future reference, your user ID number is {{.ID}}</p>
+    <p>For future reference, your user ID number is {{.userID}}</p>
+    <p>Please send a request to the <code>PUT /v1/users/activated</code> endpoint with the following JSON body to activate your account:</p>
+    <pre><code>
+    {"token": "{{.activationToken}}"}
+    </code></pre>
+    <p>Please note that this is a one-time use token and it will expire in 3 days.</p>
     <p>Thanks,</p>
     <p>The Greenlight team</p>
 </body>
